[package]
edition.workspace = true
license.workspace = true
name = "archiver"
publish.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "archiver"
path = "src/main.rs"

[dependencies]
attestor-primitives = { workspace = true, features = ["std"] }
eth = { path = "../common/eth" }
sp-core = { workspace = true, features = ["std"] }
stream_eth = { workspace = true }
stream_util = { workspace = true }
usc-abi-encoding = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
dotenvy = "0.15"
futures = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true, features = ["std"] }
sled = "0.34"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }
user = { workspace = true }

[dev-dependencies]
tempfile = "3"
