[package]
name = "attestation-blocks-online-builder"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
futures = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
ethers = { version = "2.0.14", features = ["ws"] }
#common = { path = "../common" }
utils = { path = "../common/utils" }
attestation-chain = { path = "../primitives/attestation_chain" }
#attestation-db = { path = "../attestation-db" }

futures-util = "0.3.30"
ethereum-types = "0.14.1"


# [dev-dependencies]
# criterion = "0.5.1"

# [[bench]]
# name = "create_merkle_tree_benchmark"
# harness = false

