[package]
edition = "2021"
name = "attestation-blocks-online-builder"

[workspace]
# version.workspace = true
# authors.workspace = true
# edition.workspace = true
# license.workspace = true
# publish.workspace = true
# repository.workspace = true

[dependencies]
ethers = { version = "2.0.14", features = ["ws"] }
futures = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
#common = { path = "../common" }
attestation-chain = { path = "../primitives/attestation_chain" }
block-cache = { path = "../block-cache" }
eth-common = { path = "../common/eth", package = "eth" }
mmr = { path = "../common/mmr" }
utils = { path = "../common/utils" }
#attestation-db = { path = "../attestation-db" }

anyhow = "1.0.86"
ethereum-types = "0.14.1"
futures-util = "0.3.30"

# [dev-dependencies]
# criterion = "0.5.1"

# [[bench]]
# name = "create_merkle_tree_benchmark"
# harness = false
