[package]
name = "attestation-db"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.34.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["alloc"] }
clap = { version = "4.4.7", features = ["derive"] }
anyhow = "1"
attestation-chain = { path = "../primitives/attestation_chain" }
utils = { path = "../common/utils" }
#mmr = { path = "../mmr", features = ["par_mmr"] }

rand = "0.8.5"
ethereum-types = "0.14.1"

[dev-dependencies]
lazy_static = "1.4.0"
