[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "attestation-db"
publish.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
attestation-chain = { path = "../primitives/attestation_chain" }
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["alloc"] }
tokio = "1.34.0"
utils = { path = "../common/utils" }
#mmr = { path = "../mmr", features = ["par_mmr"] }

ethereum-types = "0.14.1"
rand = "0.8.5"

[dev-dependencies]
lazy_static = "1.4.0"
