[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "attestor-online-sim"
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
attestation-chain = { path = "../primitives/attestation_chain" }
chrono = "0.4.34"
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.1.0"
core_affinity = "0.8.1"
ethers = { version = "2.0.14", features = ["ws"] }
fs_extra = "1.3.0"
futures = "0.3.30"
serde = "1.0.193"
serde_json = "1.0.108"
stacker = "0.1.15"
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.10"
utils = { path = "../common/utils" }
#attestation-db = { path = "../attestation-db" }
attestation-blocks-online-builder = { path = "../attestation-blocks-online-builder" }
ethereum-types = "0.14.1"
poc-config = { path = "../poc-config" }
