[package]
edition = "2021"
license = "MIT"
name = "attestor"
publish = false
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "attestor"
path = "bin/attestor.rs"

[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
no_effect_underscore_binding = "allow"
pedantic = "warn"
redundant_slicing = "allow"

[package.metadata.release]
release = false

[dependencies]
anyhow = "1.0"
exponential-backoff = "1.2"
kameo = { version = "0.8" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Creditcoin deps
attestation-chain = { workspace = true }
attestor-primitives = { workspace = true }
bls-signatures = { workspace = true }
cc-client = { workspace = true }
creditcoin3-attestor-gossip = { workspace = true }
creditcoin3-attestor-rpc = { workspace = true }
eth = { workspace = true }
mmr = { workspace = true, features = ["par_mmr"] }
starknet-crypto = { workspace = true }
utils = { path = "../common/utils", default-features = false }
vrf = { workspace = true }

# Workspace deps
async-trait = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sp-core = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
