[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "attestor_zombienet"
publish.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
rand = "0.8.5"
serde_yaml = "0.9"
subxt = "0.37"
subxt-signer = "0.37"
tempfile = "3"
tiny-bip39 = "1.0.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Common
attestor-primitives = { workspace = true }
cc-client = { workspace = true }
clap = { workspace = true }
futures.workspace = true
serde = { workspace = true }
tokio = { workspace = true, features = ["signal", "fs", "process"] }
tracing = { workspace = true }
