[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "checkpoint-builder"
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
dotenvy = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true, features = ["derive"] }
sled = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }

# Creditcoin-specific dependencies
attestor-primitives = { workspace = true, features = ["std"] }

[dev-dependencies]
tempfile = { workspace = true }
