[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "proof-verifier"
publish.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
sp-runtime-interface = { workspace = true, default-features = false }
sp-std = { workspace = true }
pallet-prover-primitives = { workspace = true, default-features = false}
prover-primitives = { workspace = true, optional = true }
serde_json = { workspace = true, default-features = false}
hashbrown = { version = "0.14.5", default-features = false }
tempfile = "3.10"
anyhow = { version = "1.0", optional = true }
hex = { workspace = true, optional = true }

[features]
default = ["std"]
std = ["sp-runtime-interface/std", "sp-std/std", "log/std", "prover-primitives/std", "serde_json/std",]
