[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "proof-verifier"
publish.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", optional = true }
hashbrown = { version = "0.14.5", default-features = false }
log = { workspace = true }
pallet-prover-primitives = { workspace = true, default-features = false }
prover-primitives = { workspace = true, optional = true }
serde_json = { workspace = true, default-features = false }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime-interface = { workspace = true, default-features = false }
sp-std = { workspace = true }
tempfile = "3.10"

[features]
default = ["std"]
std = [
    "sp-runtime-interface/std",
    "sp-std/std",
    "sp-io/std",
    "log/std",
    "sp-core/std",
    "prover-primitives/std",
    "serde_json/std",
    "pallet-prover-primitives/std",
]
