[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "proof-verifier"
publish.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", optional = true, default-features = false }
hashbrown = { version = "0.14.5", default-features = false }
log = { workspace = true, default-features = false }
pallet-prover-primitives = { workspace = true, default-features = false }
serde_json = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime-interface = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

# Optional
prover-primitives = { workspace = true, optional = true }
tempfile = { version = "3.10", optional = true, default-features = false }
thiserror = { version = "1.0.64", default-features = false, optional = true }
utils = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
    "sp-runtime-interface/std",
    "sp-std/std",
    "sp-io/std",
    "log/std",
    "sp-core/std",
    "prover-primitives/std",
    "serde_json/std",
    "pallet-prover-primitives/std",
    "utils/std",
    "thiserror",
    "tempfile",
]
