[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "message-relayer"
publish.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "message-relayer"
path = "bin/relayer.rs"

[lints.clippy]
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
enum_variant_names = "allow"
from_over_into = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
no_effect_underscore_binding = "allow"
redundant_slicing = "allow"
struct_field_names = "allow"

[package.metadata.release]
release = false

[dependencies]
clap = { workspace = true }
dotenvy = "0.15"
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Workspace dependencies
alloy = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
prometheus-client = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
serde_yaml = { workspace = true }
sha3 = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-util = { version = "0.7" }
tower-http = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
write-ability = { workspace = true }

# P2P
libp2p = { workspace = true, features = [
    "tokio",
    "macros",
    "ed25519",
    "dns",
    "quic",
    "tcp",
    "noise",
    "yamux",
    "identify",
    "ping",
    "mdns",
    "kad",
    "gossipsub",
] }

# Identity / secret handling
bip39 = { version = "2.2.0", features = ["rand", "serde", "zeroize"] }
zeroize = { workspace = true }

[features]
default = []
integration-tests = []

[dev-dependencies]
alloy-node-bindings = "0.11"
async-trait = { workspace = true }
parameterized = "2.1.0"
tempfile = { workspace = true }
