[package]
name = "pallet-bridge"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-support = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-bridge-grandpa = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
bp-header-chain = { workspace = true, default-features = false }
bp-runtime = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "sp-core/std",
    "sp-runtime/std",
    "frame-system/std",
    "pallet-bridge-grandpa/std",
    "parity-scale-codec/std",
    "sp-std/std",
    "sp-io/std",
    "scale-info/std",
    "bp-header-chain/std",
    "bp-runtime/std",
    "log/std",
]
