[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "proof-gen-api-server"
publish.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "proof-gen-api-server"
path = "bin/proof-gen-server.rs"

[lints.clippy]
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
enum_variant_names = "allow"
from_over_into = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
no_effect_underscore_binding = "allow"
redundant_slicing = "allow"
struct_field_names = "allow"

[package.metadata.release]
release = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "deprecated", "env"] }
deadpool-postgres = "0.12"
dotenvy = "0.15"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7", features = [
    "with-serde_json-1",
    "with-chrono-0_4",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

## Workspace dependencies
alloy = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
thiserror = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }

# Creditcoin / USC dependencies
attestor-primitives = { workspace = true }
cc-client = { workspace = true }
continuity = { workspace = true }
eth = { workspace = true }
hex = { workspace = true }
mmr = { workspace = true }
prometheus = { workspace = true }

[features]
default = []
e2e-tests = []

[dev-dependencies]
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
testcontainers = { version = "0.17", default-features = false }
testcontainers-modules = { version = "0.5", default-features = false, features = [
    "postgres",
] }
url = "2"
