[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "proof-gen-api-server"
publish.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "proof-gen-api-server"
path = "bin/server.rs"

[lints.clippy]
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
enum_variant_names = "allow"
from_over_into = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
no_effect_underscore_binding = "allow"
redundant_slicing = "allow"
struct_field_names = "allow"

[package.metadata.release]
release = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "deprecated", "env"] }
dotenvy = "0.15"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

## Workspace dependencies
alloy = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
thiserror = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

# Creditcoin / USC dependencies
attestor-primitives = { workspace = true }
cc-client = { workspace = true }
continuity = { workspace = true, features = ["block_cache"] }
eth = { workspace = true, features = ["block_cache"] }
hex = { workspace = true }
indexer-client = { workspace = true }
merkle = { workspace = true }
prometheus-client = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
sysinfo = { workspace = true }

[features]
default = []
integration-tests = []

[dev-dependencies]
alloy-node-bindings = "0.11"   # kept at 0.11 due to compatibility with alloy
reqwest = { workspace = true }
wiremock = "0.6"
